--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <main class="blog-container">
-        <header class="blog-header">
+        <nav class="blog-header">
             <span class="heading-item" id="subscribe">Subscribe</span>
             <h1 class="heading-item" id="blog-title">Blog Title</h1>
             <span class="heading-item"><i class="fa fa-search" aria-hidden="true"></i></span>
-        </header>
+        </nav>
 
         <div class="blog-row">
             <article class="blog-item">
