--- a/hw4/index.html
+++ b/hw4/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="app.css">
     <title>To-Do List</title>
 </head>
@@ -11,10 +12,8 @@
     <main>
         <header>
             <div>To Do List</div>
-            <form id="myForm" class="header">
-                <input type="text" id="content" class="content"/>
-                <input type="submit" id="submit" value="submit"/>
-            </form>
+                <input type="text" id="content" class="content" placeholder="Input to-do items"/>
+                <input type="submit" id="submit" value="+"/>
         </header>
         <section class="todo-container">
             <ul class="todo-items">
